# clinical-llm-safety-evaluation-suite

./: .gitignore  CHANGELOG.md  README.md  evaluation_plan.md  pyproject.toml  requirements-lock.txt  requirements.txt  rubric.md
.github/workflows/: ci.yml
data/: defect_log.csv  defect_log_run_b.csv  evaluation_results.csv  evaluation_results_run_b.csv  model_responses.csv  model_responses_run_b.csv  run_manifest.json  run_manifest_run_b.json  test_cases.csv
docs/: big_health_system_onboarding_playbook.md  calibration.md  human_evaluation_agreement.md
docs/ai_evaluation_engineer_workflow/: 01_evaluation_lifecycle.md  02_workplace_execution_plan.md  03_defect_review_process.md  04_project_completion_checklist.md  README.md
reports/: evaluation_report.md  run_comparison.md  sample_evaluation_report.md
scripts/: kappa_example.py
src/clinical_llm_safety_eval/: __init__.py  compare_runs.py  evaluation_version.py  evaluator.py  kappa_stats.py  manifest.py  model_runner.py  paths.py  report_generator.py  scoring.py
templates/: human_review_template.csv
tests/: test_calibration_adversarial.py  test_compare.py  test_integration.py  test_kappa.py  test_scoring.py
tests/fixtures/minimal/: model_responses.csv  model_responses_missing_one.csv  test_cases.csv
