[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-llm-safety-eval"
version = "1.0.0"
description = "Rule-based clinical LLM safety evaluation harness (CSV in, scores and reports out)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
model = [
    "openai>=1.30.0",
]

[tool.setuptools.packages.find]
where = ["src"]
